implemented parenthesis priority but found a bug where the last parenthesis is not behaving as expected and is doubling the value of its sibling node